<resources>
    <string name="app_name">Morning booster</string>
    <string name="timer_label">%1$s time: </string>
    <string name="boost_button_lbl">Boost my morning!</string>
    <string name="title_activity_settings">Settings</string>
    <string name="go_to_settings_btn_lbl">Custumize my morning</string>
    <string name="save_settings_button_lable">Save settings</string>
    <string name="timer_view_label">Boosting your Morning</string>
    <string name="timer">Remaining: %1$d : %2$d</string>
    <plurals name="minutes">
        <item quantity="one">%1$d minute</item>
        <item quantity="other">%1$d minutes</item>
    </plurals>
    <string name="total_time_label">Total time for practice: </string>
    <string name="hint_set_time">set time</string>
    <string name="setting_title_text">Set timers:</string>
    <string name="enabled_column_title">Enabled</string>
    <string name="position_column_title">Position</string>
    <string name="name_column_title">Name</string>
    <string name="time_column_title">Time</string>
</resources>
