<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        app:layout_constraintStart_toEndOf="@+id/first_timer_switch"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/timer_label"
        android:id="@+id/first_timer_label"/>
    <TextView
        app:layout_constraintStart_toEndOf="@+id/first_timer_label"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/first_timer_time"/>
    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/first_timer_switch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        app:layout_constraintStart_toEndOf="@+id/second_timer_switch"
        app:layout_constraintTop_toBottomOf="@+id/first_timer_switch"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/timer_label"
        android:id="@+id/second_timer_label"/>
    <TextView
        app:layout_constraintStart_toEndOf="@+id/second_timer_label"
        app:layout_constraintTop_toBottomOf="@+id/first_timer_switch"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/second_timer_time"/>
    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/second_timer_switch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_timer_switch"/>

    <TextView
        app:layout_constraintStart_toEndOf="@+id/third_timer_switch"
        app:layout_constraintTop_toBottomOf="@+id/second_timer_switch"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/timer_label"
        android:id="@+id/third_timer_label"/>
    <TextView
        app:layout_constraintStart_toEndOf="@+id/third_timer_label"
        app:layout_constraintTop_toBottomOf="@+id/second_timer_switch"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/third_timer_time"/>
    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/third_timer_switch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/second_timer_switch"/>

    <TextView
        app:layout_constraintStart_toEndOf="@+id/fourth_timer_switch"
        app:layout_constraintTop_toBottomOf="@+id/third_timer_switch"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/timer_label"
        android:id="@+id/fourth_timer_label"/>
    <TextView
        app:layout_constraintStart_toEndOf="@+id/fourth_timer_label"
        app:layout_constraintTop_toBottomOf="@+id/third_timer_switch"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/fourth_timer_time"/>
    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fourth_timer_switch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/third_timer_switch"/>

    <TextView
        app:layout_constraintStart_toEndOf="@+id/fifth_timer_switch"
        app:layout_constraintTop_toBottomOf="@+id/fourth_timer_switch"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/timer_label"
        android:id="@+id/fifth_timer_label"/>
    <TextView
        app:layout_constraintStart_toEndOf="@+id/fifth_timer_label"
        app:layout_constraintTop_toBottomOf="@+id/fourth_timer_switch"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/fifth_timer_time"/>
    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fifth_timer_switch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fourth_timer_switch"/>

    <TextView
        app:layout_constraintStart_toEndOf="@+id/sixth_timer_switch"
        app:layout_constraintTop_toBottomOf="@+id/fifth_timer_switch"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/timer_label"
        android:id="@+id/sixth_timer_label"/>
    <TextView
        app:layout_constraintStart_toEndOf="@+id/sixth_timer_label"
        app:layout_constraintTop_toBottomOf="@+id/fifth_timer_switch"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/sixth_timer_time"/>
    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sixth_timer_switch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fifth_timer_switch"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/total_time_label"
        android:text="@string/total_time_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sixth_timer_switch"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/total_time_timer"
        app:layout_constraintStart_toEndOf="@id/total_time_label"
        app:layout_constraintTop_toBottomOf="@+id/sixth_timer_switch"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/total_time_label"
        android:text="@string/boost_button_lbl"
        android:id="@+id/boost_button"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boost_button"
        android:id="@+id/open_settings_button"
        android:text="@string/go_to_settings_btn_lbl"/>



</androidx.constraintlayout.widget.ConstraintLayout>